--- a/src/app/entries/entry/entry.component.css
+++ b/src/app/entries/entry/entry.component.css
@@ -1,39 +1,58 @@
 h2 {
-    font-size: 2.8rem;
+    font-size: 1.8rem;
     font-family: Lato, serif;
     font-weight: 500;
     line-height: 1.05;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     margin-top: 0;
     text-transform: capitalize;
     max-width: 14em;
+    padding-bottom: .5em;
 }
 
 figure {
     margin: 0;
-    border: 1px solid #443642;
+    /* border: 1px solid #443642; */
+    overflow: hidden;
     position: relative;
-}
-
-figcaption {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    font-size: 1.2em;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
 }
 
 img {
     display: block;
-    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     height: auto;
+    border-radius: 8px;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+    transition: transform .5s;
+}
+
+figcaption {
+    display: inline;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 1.3em;
+    padding: 1em 1em 1em 4em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 0px 0px 8px 8px;
+}
+
+figcaption {
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+figure:hover figcaption {
+    opacity: 1;
+    left: -5%;
+    transition: opacity 0.5s ease-in-out 0.1s, left 0.5s ease-out 0.1s;
 }
 
 :host {
-    padding: 1em;
+    padding: 3em;
     display: block;
 }
 
