--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,19 +1,50 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: sans-serif;
+    font-family: 'Lato',sans-serif;
     background-color: #fff;
     color: #003a3a;
+    font-size: .8rem;
+    line-height: 1.5;
+    text-rendering: optimizeLegibility;
+    --x-height-multiplier: 0.35;
+    -webkit-font-smoothing: antialiased;
+    margin: 0;
 }
 
 footer {
     clear: both;
 }
 
-app-entry { /* move to entry.component.css */
+
+app-entry {
+    /* move to entry.component.css */
     display: block;
     padding: 1em;
     max-width: 1200px;
     margin: 0 auto;
 }
+
+
+/* .clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
+}
+
+.photo-container img {
+    max-width: 100%;
+}
+
+.photo-container {
+    text-align: left;
+    margin-bottom: 2em;
+    position: relative;
+    overflow: hidden;
+} */
+
 
 .actions {
     padding: 1em 0;
@@ -22,6 +53,7 @@ app-entry { /* move to entry.component.css */
 app-entry-like {
   margin-right: 1em;
 }
+
 h2 {
     white-space: nowrap;
     overflow: hidden;
@@ -42,30 +74,6 @@ button:focus {
 
 .liked {
     color: #00aaff;
-}
-
-figure {
-    overflow: hidden;
-    position: relative;
-    margin: 0;
-}
-
-figcaption {
-    color: #fff;
-    background-color: rgba(0,0,0,0.5);
-    font-size: 1.2em;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    min-width: 100%;
-    height: auto;
 }
 
 .comments.hidden {
@@ -100,10 +108,42 @@ label {
 }
 
 app-entry-comment-form button {
-    background-color: #003f3f;
-    color: #fff;
     padding: .5em .75em;
+    background-color: rgb(255, 255, 255);
+    color: #E0437F;
+    border: .5px solid #E0437F;
+    background: 0 0;
+    cursor: pointer;
+    border-radius: 4px;
+    text-align: center;
+    font-family: 'Lato',sans-serif;
+    font-weight: 700;
+    line-height: 1.3;
+    font-size: .9rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 19px 40px 20px;
+    display: block;
+    flex-basis: 100%;
+    /* width: 100%; */
+    transition: box-shadow 420ms cubic-bezier(.165, .84, .44, 1),
+    color 420ms cubic-bezier(.165, .84, .44, 1),
+    background 420ms cubic-bezier(.165, .84, .44, 1);
+    word-break: break-word;
 }
+
+app-entry-comment-form button:hover {
+    box-shadow: inset 0 0 0 2px #E0437F;
+    /* border-bottom: 0; */
+}
+
+app-entry-comment-form button:active {
+    background-color: #E0437F;
+    color: rgb(255, 255, 255);
+    outline: 0;
+    box-shadow: inset 0 0 0 2px #E0437F;
+}
+
 
 app-entry-comment-form textarea {
     width: 100%;
@@ -119,4 +159,16 @@ app-entry-comment-form textarea {
 .alert.alert-danger {
     background-color: #9a0000;
     color: #fff;
+}
+
+
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media screen and (min-width: 25rem) {
+    app-entry-comment-form button {
+        font-size: calc(.9rem + (-.40000000000000036 * (100vw - 400px)/ 624));
+    }
 }
