src/styles/main.css, src/app/entries/entry/entry-comment-form.component.html, src/app/entries/entry/entry.component.css for better design

--- a/src/app/entries/entry/entry-comment-form.component.html
+++ b/src/app/entries/entry/entry-comment-form.component.html
@@ -1,7 +1,7 @@
 <form action="" (submit)="onSubmit()" #commentForm="ngForm"> 
     <div>
         <label for="name">Name</label>
-        <input type="text" name="name" [(ngModel)]="name" />
+        <input type="text" class="input-name" placeholder="Your name.." name="name" [(ngModel)]="name" />
     </div>
     <div>
         <label for="comment">Comment</label>
