--- a/src/app/entries/entry/entry.component.css
+++ b/src/app/entries/entry/entry.component.css
@@ -32,7 +32,7 @@ figcaption {
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
     font-size: 1.3em;
-    padding: 1em 1em 1em 4em;
+    padding: 1em 1em 1em 5em;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -47,13 +47,25 @@ figcaption {
 
 figure:hover figcaption {
     opacity: 1;
-    left: -5%;
+    left: -8%;
     transition: opacity 0.5s ease-in-out 0.1s, left 0.5s ease-out 0.1s;
 }
 
 :host {
-    padding: 3em;
+    padding: 2em;
     display: block;
+    opacity: 0.4;
+    transition: opacity 420ms ease-in-out;
+}
+
+:host(:hover) {
+    opacity: 1;
+}
+
+:host(:active) {
+    position: relative;
+    /* top: 3px;
+    left: 3px; */
 }
 
 .actions{
