--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,8 +5,9 @@
 body {
     font-family: 'Lato',sans-serif;
     background-color: #fff;
+    /* font-size: 62.5% /* 1em = 10px */; */
+    font-size: .8em;
     color: #003a3a;
-    font-size: .8rem;
     line-height: 1.5;
     text-rendering: optimizeLegibility;
     --x-height-multiplier: 0.35;
@@ -18,7 +19,6 @@ footer {
     clear: both;
 }
 
-
 app-entry {
     /* move to entry.component.css */
     display: block;
@@ -27,6 +27,60 @@ app-entry {
     margin: 0 auto;
 }
 
+.input-name {
+    margin-top: 10px;
+    width: 150px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: .9em;
+    background-color: white;
+    /* background-image: url('../../photos/usericon.svg'); */
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    border: 2px solid #ccc;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    color:#003a3a;
+    padding: 12px 20px 12px 20px;
+    text-align: left;
+}
+
+.input-name:focus {
+    width: 100%;
+    border: 2px solid #555;
+    outline: none;
+}
+
+form textarea {
+    margin-top: 10px;
+    width: 500px;
+    height: 100px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: "Helvetica Neue",
+    Helvetica,
+    Arial,
+    sans-serif;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+
+form textarea:focus {
+    background: none repeat scroll 0 0 #FFFFFF;
+    outline-width: 0;
+}
 
 /* .clearfix::after {
     content: " ";
@@ -89,8 +143,9 @@ button:focus {
 }
 
 .comment {
-    padding: .5em 1em;
+    padding: .5em 1.5em;
     background-color: #eee;
+    border-radius: 4px;
 }
 
 .comment.odd {
